--- a/1/index.html
+++ b/1/index.html
@@ -1,21 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="/assets/css/pico.min.css">
-		<title>My 11ty Blog</title>
-	</head>
-	<body>
-		<header class="container">
-			<h1>My 11ty Blog</h1>
-		</header>
-		<main class="container">
-			<p><a href="/blog/post-1/">Post 1 - 01-01-2025</a></p>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/picnic.min.css">
+    <title>My 11ty Blog</title>
+    <style>
+      .container {
+        background: #fff;
+        text-align: left;
+        width: 90%;
+        max-width: 960px;
+        margin: 0 auto;
+        padding: 80px 0 0;
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <a href="/" class="brand"><span>My Blog</span></a><input id="bmenu" type="checkbox" class="show"><label for="bmenu" class="burger toggle pseudo button">menu</label>
+      <div class="menu">
+        <a href="/tests" class="pseudo button icon-help-circled">Item1</a>
+        <a href="/tests" class="pseudo button icon-help-circled">Item2</a>
+        <a href="/tests" class="pseudo button icon-help-circled">Item3</a>
+      </div>
+    </nav>
+    <main class="container"><p><a href="/blog/post-1/">Post 1 - 01-01-2025</a></p>
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae ...
 </p><p><a href="/blog/post-1/">Read more</a></p>
 <p><a href="/">Newer</a></p>
-
-		</main>
-	</body>
+</main>
+  </body>
 </html>
